# halflife

./: CMakeLists.txt  liblist.gam
cl_dll/: CMakeLists.txt  hud.h  hud_msg.cpp  hud_redraw.cpp  vgui_TeamFortressViewport.cpp  vgui_TeamFortressViewport.h  vgui_firstmenu.cpp
dlls/: CMakeLists.txt  client.cpp  globals.cpp  player.cpp  singleplay_gamerules.cpp  triggers.cpp  world.cpp
fgd/: runjumpretry.fgd
pm_shared/: pm_shared.c
